@@ -1145,6 +1145,7 @@
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
   <module id="lsr">
     <branch id="HEAD"/>
@@ -1397,8 +1398,9 @@
     <branch id="gnome-2-14" stringfrozen="true"/>
   </module>
   <module id="zenity">
-    <branch id="HEAD" stringfrozen="true"/>
+    <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
+    <branch id="gnome-2-18" stringfrozen="true"/>
   </module>
 </modules>
