@@ -413,7 +413,7 @@
       <module id="libgnomeprint" branch="gnome-2-18"/>
       <module id="libgnomeprintui"/>
       <module id="libgtop" branch="gnome-2-14"/>
-      <module id="libwnck"/>
+      <module id="libwnck" branch="gnome-2-18"/>
       <module id="metacity" branch="gnome-2-18"/>
       <module id="nautilus" branch="gnome-2-18"/>
       <module id="nautilus-cd-burner" branch="gnome-2-18"/>
@@ -425,7 +425,7 @@
       <module id="vino" branch="gnome-2-18"/>
       <module id="vte"/>
       <module id="yelp"/>
-      <module id="zenity"/>
+      <module id="zenity" branch="gnome-2-18"/>
     </category>
     <category id="admin">
       <_description>Administration Tools.</_description>
