@@ -1,3 +1,8 @@
+2007-04-30  Claude Paroz  <claude@2xlibre.net>
+
+	* gnome-modules.xml.in:
+	* releases.xml.in: Branched libwnck and zenity for 2.18.
+
 2007-04-28  Claude Paroz  <claude@2xlibre.net>
 
 	* templates/module.tmpl: Corrected display bug by adding silent
